# doomify

./: .gitignore  CMakeLists.txt  README.md  doomify.py  index.html  pallete.py  run
assets/css/: main.css
doomify/: CMakeLists.txt  doomify.pro  doomify.sln  imagegeneration.cpp  imagegeneration.h  job.cpp  job.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  palettes.cpp  palettes.h
doomify/doomify/: doomify.cpp  doomify.h  doomify.qrc  doomify.ui  doomify.vcxproj  doomify.vcxproj.filters  main.cpp
doomify/palettes/: DOOM.dmfy  Quake.dmfy
icons/: browserconfig.xml  site.webmanifest
src/: doomify.pro  doomify.qrc  imageschema.h  job.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  palettes.cpp  palettes.h  platform.cpp  platform.h
src/palette_loaders/: gplpaletteloader.cpp  gplpaletteloader.h  jsonpaletteloader.cpp  jsonpaletteloader.h  paletteloader.h  paletteloaderoutcome.h  palettemanager.cpp  palettemanager.h
src/palettes/: doom.json  quake.json
